--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -57,3 +57,5 @@ https://github.com/alex-shpak/hugo-book
 {{ range .Site.Params.custom_css -}}
     <link rel="stylesheet" href="{{ . | absURL }}">
 {{- end }}
+  <link rel="stylesheet" href="https://developer.rayteams.com/css/style.css" />
+  <link rel="stylesheet" href="https://developer.rayteams.com/css/ray.css" />
