add hoem md and update footer

--- a/layouts/partials/docs/html-head.html
+++ b/layouts/partials/docs/html-head.html
@@ -57,5 +57,6 @@ https://github.com/alex-shpak/hugo-book
 {{ range .Site.Params.custom_css -}}
     <link rel="stylesheet" href="{{ . | absURL }}">
 {{- end }}
-  <link rel="stylesheet" href="https://developer.rayteams.com/css/style.css" />
-  <link rel="stylesheet" href="https://developer.rayteams.com/css/ray.css" />
+<link rel="stylesheet" href="https://developer.rayteams.com/css/style.css" />
+<link rel="stylesheet" href="https://developer.rayteams.com/css/ray.css" />
+<script src="https://kit.fontawesome.com/8c8bf9c790.js" crossorigin="anonymous"></script>
