--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,16 +24,30 @@
             </div>
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
               {{ $lng := (cond (eq $.Site.Language.Lang "en") "" $.Site.Language.Lang) }}
-              {{ if eq $lng "" }}
-              <ul class="navbar-nav rayteams-menu">
-                <li class="{{ (print (cond (eq .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="/docs/platfromapi-overview/introduction/">Platform API</a></li>
-                <li class="{{ (print (cond (ne .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="/posts/">Blog</a></li>
-              </ul>
+              {{ if eq .Params.home true }}
+                {{ if eq $lng "" }}
+                <ul class="navbar-nav rayteams-menu">
+                  <li class="nav-item"><a class="nav-link" href="/docs/platfromapi-overview/introduction/">Platform API</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/posts/">Blog</a></li>
+                </ul>
+                {{ else }}
+                <ul class="navbar-nav rayteams-menu">
+                  <li class="nav-item"><a class="nav-link" href="{{ (print "/" $lng "/docs/platfromapi-overview/introduction/") }}">Platform API</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{{ (print "/" $lng "/posts/" ) }}">Blog</a></li>
+                </ul>
+                {{ end }}
               {{ else }}
-              <ul class="navbar-nav rayteams-menu">
-                <li class="{{ (print (cond (eq .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="{{ (print "/" $lng "/docs/platfromapi-overview/introduction/") }}">Platform API</a></li>
-                <li class="{{ (print (cond (ne .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="{{ (print "/" $lng "/posts/" ) }}">Blog</a></li>
-              </ul>
+                {{ if eq $lng "" }}
+                <ul class="navbar-nav rayteams-menu">
+                  <li class="{{ (print (cond (eq .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="/docs/platfromapi-overview/introduction/">Platform API</a></li>
+                  <li class="{{ (print (cond (ne .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="/posts/">Blog</a></li>
+                </ul>
+                {{ else }}
+                <ul class="navbar-nav rayteams-menu">
+                  <li class="{{ (print (cond (eq .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="{{ (print "/" $lng "/docs/platfromapi-overview/introduction/") }}">Platform API</a></li>
+                  <li class="{{ (print (cond (ne .Type "docs") "nav-item active" "nav-item") )}}"><a class="nav-link" href="{{ (print "/" $lng "/posts/" ) }}">Blog</a></li>
+                </ul>
+                {{ end }}
               {{ end }}
             </div>
           </div>
@@ -57,81 +71,87 @@
       </nav>
     </header>
     <div class="container">
-      {{ if eq .Type "docs" }}
-      <div class="row">
-        <div class="col-xl-3 order-xl-1 sidebar doc-sidebar py-md-6 py-6 d-xl-block order-1 book-menu">
-          <div class="book-menu-content">
-            <div class="widget">
-              {{ template "menu" . }} <!-- Left menu Content -->
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-7 order-2 pt-md-8 pb-10">
-          <header class="book-header">
-            {{ template "header" . }} <!-- Mobile layout header -->
-          </header>
-          <h1 class="mb-5">
-            {{ print .Page.LinkTitle | humanize | title }}
-          </h1>
-
-          {{ partial "docs/inject/content-before" . }}
-          {{ template "main" . }} <!-- Page Content -->
-          {{ partial "docs/inject/content-after" . }}
-
-          <footer class="book-footer">
-            {{ template "footer" . }} <!-- Footer under page content -->
-            {{ partial "docs/inject/footer" . }}
-          </footer>
-
-          {{ template "comments" . }} <!-- Comments block -->
-
-          <label for="menu-control" class="hidden book-menu-overlay"></label>
-        </div>
-        <aside class="col-xl-2 order-xl-3 sidebar sticky-sidebar mt-md-0 py-8 d-none d-xl-block">
-          <div class="widget">
-            <h6 class="widget-title fs-17 mb-2">On this page</h6>
-            <div class="list-unstyled fs-sm lh-sm text-reset">
-              {{ template "toc" . }} <!-- Table of Contents -->
-            </div>
-          </div>
-        </aside>
-      </div>
+      {{ if eq .Params.home true }}
+        <div>이곳은 대문입니다.</div>
       {{ else }}
-      <div class="row">
-        <div class="col-xl-10 pt-md-9 pb-10">
-
-          {{ if ne .Title "Blog" }}
-          <div class="mb-5">
-            {{ if eq $lng "" }}
-            <a href="/posts/">Posts</a>
-            {{ else }}
-            <a href="{{ (print "/" $lng "/posts/" ) }}">Posts</a>
-            {{ end }}
-          </div>
-          {{ end }}
-
-          {{ partial "docs/inject/content-before" . }}
-          {{ template "main" . }} <!-- Page Content -->
-          {{ partial "docs/inject/content-after" . }}
-
-          <footer class="book-footer">
-            {{ template "footer" . }} <!-- Footer under page content -->
-            {{ partial "docs/inject/footer" . }}
-          </footer>
-
-          {{ template "comments" . }} <!-- Comments block -->
-
-          <label for="menu-control" class="hidden book-menu-overlay"></label>
-        </div>
-        <aside class="col-xl-2 order-xl-3 sidebar sticky-sidebar mt-md-0 py-8 d-none d-xl-block">
-          <div class="widget">
-            <h6 class="widget-title fs-17 mb-2">On this page</h6>
-            <div class="list-unstyled fs-sm lh-sm text-reset">
-              {{ template "toc" . }} <!-- Table of Contents -->
+        {{ if eq .Type "docs" }}
+        <div class="row">
+          <div class="col-xl-3 order-xl-1 sidebar doc-sidebar py-md-6 py-6 d-xl-block order-1 book-menu">
+            <div class="book-menu-content">
+              <div class="widget">
+                {{ template "menu" . }} <!-- Left menu Content -->
+              </div>
             </div>
           </div>
-        </aside>
-      </div>
+          <div class="col-xl-7 order-2 pt-md-8 pb-10">
+            <header class="book-header">
+              {{ template "header" . }} <!-- Mobile layout header -->
+            </header>
+            <h1 class="mb-5">
+              <a href="#">
+                {{ print .Page.LinkTitle | humanize | title }}
+              </a>
+            </h1>
+
+            {{ partial "docs/inject/content-before" . }}
+            {{ template "main" . }} <!-- Page Content -->
+            {{ partial "docs/inject/content-after" . }}
+
+            <footer class="book-footer">
+              {{ template "footer" . }} <!-- Footer under page content -->
+              {{ partial "docs/inject/footer" . }}
+            </footer>
+
+            {{ template "comments" . }} <!-- Comments block -->
+
+            <label for="menu-control" class="hidden book-menu-overlay"></label>
+          </div>
+          <aside class="col-xl-2 order-xl-3 sidebar sticky-sidebar mt-md-0 py-8 d-none d-xl-block">
+            <div class="widget">
+              <h6 class="widget-title fs-17 mb-2">On this page</h6>
+              <div class="list-unstyled fs-sm lh-sm text-reset">
+                {{ template "toc" . }} <!-- Table of Contents -->
+              </div>
+            </div>
+          </aside>
+        </div>
+        {{ else }}
+        <div class="row">
+          <div class="col-xl-10 pt-md-9 pb-10">
+
+            {{ if ne .Title "Blog" }}
+            <div class="mb-5">
+              {{ if eq $lng "" }}
+              <a href="/posts/">Posts</a>
+              {{ else }}
+              <a href="{{ (print "/" $lng "/posts/" ) }}">Posts</a>
+              {{ end }}
+            </div>
+            {{ end }}
+
+            {{ partial "docs/inject/content-before" . }}
+            {{ template "main" . }} <!-- Page Content -->
+            {{ partial "docs/inject/content-after" . }}
+
+            <footer class="book-footer">
+              {{ template "footer" . }} <!-- Footer under page content -->
+              {{ partial "docs/inject/footer" . }}
+            </footer>
+
+            {{ template "comments" . }} <!-- Comments block -->
+
+            <label for="menu-control" class="hidden book-menu-overlay"></label>
+          </div>
+          <aside class="col-xl-2 order-xl-3 sidebar sticky-sidebar mt-md-0 py-8 d-none d-xl-block">
+            <div class="widget">
+              <h6 class="widget-title fs-17 mb-2">On this page</h6>
+              <div class="list-unstyled fs-sm lh-sm text-reset">
+                {{ template "toc" . }} <!-- Table of Contents -->
+              </div>
+            </div>
+          </aside>
+        </div>
+        {{ end }}
       {{ end }}
     </div>
   </div>
